qa/portal/deployments.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: portal
  name: portal
  annotations:
    fluxcd.io/automated: 'true'
spec:
  replicas: 2
  selector:
    matchLabels:
      app: portal
  template:
    metadata:
      labels:
        app: portal
    spec:
      containers:
      - image: chusj/cqdg-portal-ui:c905f4f
        name: portal
